--- a/Maze Algorithms.ipynb
+++ b/Maze Algorithms.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "|.|.|.|#|F|#|.|#|.|.|\n",
+      "|#|#|.|#|.|#|.|#|.|#|\n",
+      "|.|.|S|.|.|.|.|.|.|.|\n",
+      "|#|#|.|#|#|#|.|#|#|#|\n",
+      "|.|.|.|.|.|#|.|.|.|.|\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "maze = [\n",
     "    [\".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\", \".\"],\n",
@@ -796,7 +809,7 @@
     "\n",
     "# Tell It What To Do\n",
     "\n",
-    "# print_to_file(\"ex. graph1\", 10, \"row_by_row\", (50, 76), 120)\n",
+    "# print_to_file(\"demofile2\", 10, \"row_by_row\", (50, 76), 120)\n",
     "\n",
     "# g1 = graph(maze)\n",
     "# path = g1.search_1()\n",
@@ -825,23 +838,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 1, 0, 1, 0, 1, 0, 0]\n",
+      "[1, 1, 0, 1, 0, 1, 0, 1, 0, 1]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[1, 1, 0, 1, 1, 1, 0, 1, 1, 1]\n",
+      "[0, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
+      "0,0,0,1,0,1,0,1,0,0\n",
+      "1,1,0,1,0,1,0,1,0,1\n",
+      "0,0,0,0,0,0,0,0,0,0\n",
+      "1,1,0,1,1,1,0,1,1,1\n",
+      "0,0,0,0,0,1,0,0,0,0\n"
+     ]
+    },
+    {
+     "ename": "OSError",
+     "evalue": "[Errno 9] Bad file descriptor",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-ff5fab684b30>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprintFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"RoombaMap.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-24-ff5fab684b30>\u001b[0m in \u001b[0;36mprintFile\u001b[1;34m(arr, filename)\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mrowStr\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m             \u001b[0mfile\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrowStr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrowStr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# for testing purposes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[1;31m# file.write(\"\\n\\n\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[1;31m# file.close()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mOSError\u001b[0m: [Errno 9] Bad file descriptor"
+     ]
+    }
+   ],
    "source": [
     "for row in arr:\n",
     "    print(row)\n",
     "\n",
     "def printFile(arr, filename):\n",
-    "    with open(filename,\"w+\") as file:\n",
+    "    with open(filename, 'w') as file:\n",
     "        for row in arr:\n",
     "            rowStr = \"\"\n",
     "            for spot in row[:-1]:\n",
     "                rowStr += str(spot) + \",\"\n",
     "            rowStr += str(row[len(row)-1])\n",
-    "            file.write(rowStr + \"\\n\") \n",
+    "            file.write(rowStr) \n",
     "            print(rowStr) # for testing purposes \n",
-    "        file.write(\"\\n\\n\")\n",
+    "        # file.write(\"\\n\\n\")\n",
     "    # file.close()\n",
     "\n",
     "    \n",
