--- a/Generation.ipynb
+++ b/Generation.ipynb
@@ -46,33 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(30, 39), (29, 39), (28, 39), (28, 38), (28, 37), (29, 37), (29, 36), (29, 35), (29, 34), (30, 34), (31, 34), (32, 34), (32, 33), (33, 33), (34, 33), (35, 33), (35, 32), (36, 32), (36, 31), (36, 30), (35, 30), (34, 30), (34, 29), (33, 29), (33, 28), (33, 27), (33, 26), (32, 26), (31, 26), (31, 25), (31, 24), (31, 23), (31, 22), (31, 21), (30, 21), (29, 21), (28, 21), (27, 21), (26, 21), (25, 21), (24, 21), (23, 21), (22, 21), (22, 20), (22, 19), (22, 18), (22, 17), (22, 16), (21, 16), (20, 16), (20, 15), (19, 15), (18, 15), (18, 16), (18, 17), (18, 18), (17, 18), (16, 18), (15, 18), (15, 19), (14, 19), (13, 19), (13, 18), (12, 18), (12, 17), (12, 16), (12, 15), (11, 15), (10, 15), (10, 14), (10, 13), (9, 13), (9, 12), (9, 11), (8, 11), (8, 10), (7, 10), (7, 9), (7, 8), (7, 7), (7, 6), (7, 5), (7, 4), (6, 4), (5, 4), (4, 4), (4, 3)]\n",
-      "[(4, 38), (3, 38), (3, 39), (2, 39), (1, 39), (1, 38), (0, 38), (0, 37), (0, 36), (1, 36), (2, 36), (3, 36), (3, 35), (3, 34), (3, 33), (3, 32), (4, 32), (5, 32), (5, 31), (5, 30), (5, 29), (5, 28), (4, 28), (4, 27), (4, 26), (4, 25), (4, 24), (4, 23), (4, 22), (4, 21), (4, 20), (4, 19), (4, 18), (4, 17), (5, 17), (6, 17), (7, 17), (7, 16), (7, 15), (7, 14), (8, 14), (9, 14), (10, 14), (11, 14), (12, 14), (13, 14), (14, 14), (15, 14), (15, 15), (15, 16), (15, 17), (16, 17), (17, 17), (18, 17), (19, 17), (20, 17), (20, 18), (20, 19), (20, 20), (20, 21), (21, 21), (22, 21), (23, 21), (23, 20), (24, 20), (25, 20), (26, 20), (26, 21), (27, 21), (28, 21), (29, 21), (29, 20), (30, 20), (30, 19), (30, 18), (30, 17), (30, 16), (30, 15), (30, 14), (30, 13), (31, 13), (32, 13), (33, 13), (34, 13), (34, 14), (35, 14), (36, 14)]\n",
-      "[(39, 25), (39, 26), (39, 27), (38, 27), (37, 27), (37, 28), (37, 29), (36, 29), (36, 30), (36, 31), (36, 32), (36, 33), (36, 34), (35, 34), (34, 34), (33, 34), (32, 34), (32, 33), (32, 32), (32, 31), (32, 30), (31, 30), (31, 29), (31, 28), (30, 28), (29, 28), (29, 27), (29, 26), (29, 25), (29, 24), (29, 23), (30, 23), (31, 23), (31, 22), (31, 21), (31, 20), (30, 20), (29, 20), (28, 20), (27, 20), (27, 19), (27, 18), (26, 18), (25, 18), (25, 19), (24, 19), (23, 19), (23, 20), (23, 21), (22, 21), (21, 21), (20, 21), (19, 21), (18, 21), (17, 21), (16, 21), (15, 21), (14, 21), (13, 21), (12, 21), (11, 21), (11, 20), (10, 20), (9, 20), (9, 19), (9, 18), (9, 17), (9, 16), (9, 15), (9, 14), (9, 13), (9, 12), (9, 11), (9, 10), (9, 9), (8, 9), (8, 8), (8, 7), (7, 7), (6, 7), (6, 6), (6, 5), (6, 4), (7, 4), (7, 3)]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:115: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "<>:134: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "<>:115: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "<>:134: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "C:\\Users\\jjfri\\AppData\\Local\\Temp\\ipykernel_52392\\1959740282.py:115: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "  if player_x is not \"not\" and player_x == x and player_y == y:\n",
-      "C:\\Users\\jjfri\\AppData\\Local\\Temp\\ipykernel_52392\\1959740282.py:134: SyntaxWarning: \"is not\" with a literal. Did you mean \"!=\"?\n",
-      "  return self.stats[id] is not \"#\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import heapq\n",
     "\n",
@@ -188,7 +164,7 @@
     "        for y in range(self.height):\n",
     "            row = []\n",
     "            for x in range(self.width):\n",
-    "                if player_x is not \"not\" and player_x == x and player_y == y:\n",
+    "                if player_x != \"not\" and player_x == x and player_y == y:\n",
     "                    if x + 1 == self.width:\n",
     "                        row.append(\" |P|\")\n",
     "                        \n",
@@ -207,7 +183,7 @@
     "        return 0 <= x < self.width and 0 <= y < self.height\n",
     "    \n",
     "    def passable(self, id):\n",
-    "        return self.stats[id] is not \"#\"\n",
+    "        return self.stats[id] != \"#\"\n",
     "    \n",
     "    def unknown(self, known, pos):\n",
     "        k = []\n",
@@ -949,7 +925,7 @@
     "\n",
     "# Tell It What To Do\n",
     "\n",
-    "print_to_file(\"demofile2.txt\", 3, \"row_by_row\", (20, 20), 10)\n",
+    "# print_to_file(\"demofile2.txt\", 3, \"row_by_row\", (20, 20), 10)\n",
     "\n",
     "# g1 = graph(maze)\n",
     "# path = g1.search_1()\n",
